--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
 
     </div> <!-- end of main -->   
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+    <!-- maybe also need this for the countdown -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </body>
 </html>
 
