--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet">
+      
+    <!-- countdown bar -->
+    <script src="js/countdown.js"></script>
     </head>
 <body>
     <div class = "container"> <!-- start of main -->
