minor style updates

--- a/index.html
+++ b/index.html
@@ -34,12 +34,14 @@
     <div class = "monkeysay">
     <p>Monkey says "I love all of you"</p>
     </div>
-<footer class = "navbar-fixed-bottom progress-footer">   
+<footer class = "navbar-fixed-bottom">  
+    <div class = "progress-footer">
     <h3>I'm 26/100 days into 100 Days of Code</h3>
 <!-- begin countdown -->
 <div class="progress-wrap progress" data-progress-percent="26">
   <div class="progress-bar progress"></div>
 </div>
+        </div>
         </footer>
         
         
