--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     
     <div class = "monkeysay">
     <p>Monkey says "I love all of you"</p>
+        <div><img src = "/images/Cupcake.png" class="img-responsive" alt="a cupcake"><h3>Hey, look... a cupcake.</h3></div>
     </div>
         </div> <!-- end of main -->  
 <footer class = "navbar-fixed-bottom">  
