--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     
     <div class = "monkeysay">
     <p>Monkey says "I love all of you"</p>
-        <div><img src = "/images/Cupcake.png" class="img-responsive" alt="a cupcake"><h3>Hey, look... a cupcake.</h3></div>
+        <div><img src = "images/Cupcake.png" class="img-responsive" alt="a cupcake"><h3>Hey, look... a cupcake.</h3></div>
     </div>
         </div> <!-- end of main -->  
 <footer class = "navbar-fixed-bottom">  
     <div class = "progress-footer">
-    <h3>I'm 26/100 days into 100 Days of Code</h3>
+    <h3>I'm 27/100 days into 100 Days of Code</h3>
 <!-- begin countdown -->
-<div class="progress-wrap progress" data-progress-percent="26">
+<div class="progress-wrap progress" data-progress-percent="27">
   <div class="progress-bar progress"></div>
 </div>
         </div>
